--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,12 @@
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
+    <string name="random_button_text">Random</string>
     <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_first_fragment">0</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="BRUH">BRRRRRRRRUUUUUUUUUH</string>
+    <string name="Toast">Toast</string>
+    <string name="Count_Button_Text">Count</string>
 </resources>
